# pokedex_rs

./: Cargo.toml  README.md
src/: main.rs  poke_error.rs  pokeapi_endpoint.rs
src/Networking/: Webservice.rs
