[package]
name = "pokedex_core"
version = "0.1.0"
authors = ["Christopher Karani <chrisbkarani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

"serde" = "1.0"
"serde_json" = "1.0"
"serde_derive" = "1.0"
"reqwest" = "0.10.1"
tokio = { version = "0.2", features = ["macros", "tcp", "dns", "io-util"] }